--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,7 +1,6 @@
 
 
 .contenedor{
-    margin-top: 60px;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -9,7 +8,8 @@
     justify-content: space-between;
     align-items: center;
     height: 60vh;
-    background-color: rgba(217, 199, 184, 0.5) ;
+    /*background-image: url(../assets/olivillo.jpg);*/
+    /*background-image: url(../assets/Diseño\ sin\ título.jpg);*/
 }
 
 iframe{
