--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.carousel{
+/*.carousel{
   margin-top: 20px;
 }
 .divcasas{
@@ -26,4 +26,4 @@
   position: absolute;
   top: 0%;
   left: 0%;
-}
+}*/
