--- a/src/styles/Navegador.css
+++ b/src/styles/Navegador.css
@@ -1,7 +1,23 @@
 .logo{
     height: 7vh;
+    width: 15vw;
+    align-self: center;
+    margin-left: 30px;
 }
-nav-bar{
-    position: fixed;
+.navegador{
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: grey;
+    width: 100vw;
+}
+
+.botones{
+    display: flex;
+    flex-direction: row;
+    gap: 70px;
+    align-items: center;
+    margin-right: 30px;
 }
 
