--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
-.carousel{
+/*.carousel{
     margin-top: 20px;
-  }
-  .divcasas{
+  }*/
+  /*.divcasas{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -11,6 +11,20 @@
   .olivo{
     background-image: url(./assets/fondo.jpg);
     background-attachment: fixed;
+  }*/
+
+  .grid{
+    display: grid;
+    grid-template-columns: 45% 55%;
+    grid-template-rows: auto auto;
+    grid-gap: 10px;
+  }
+
+  .grid-dos{
+    display: grid;
+    grid-template-columns: 55% 45%;
+    grid-template-rows: auto auto;
+    grid-gap: 10px;
   }
   
   .react-player{
@@ -18,3 +32,96 @@
     top: 0%;
     left: 0%;
   }
+
+  .one{
+    background-image: url(../assets/casa1.jpeg);
+    background-size: cover;
+    height: 45vh;
+    margin-top: 100px;
+    margin-left: 10px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;   
+}
+
+  .two{
+    background-image: url(../assets/casa2.jpeg);
+    background-size: cover;
+    height: 45vh;
+    margin-top: 100px;
+    margin-right: 10px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+  .three{
+    background-image: url(../assets/casa3.jpeg);
+    background-size: cover;
+    height: 45vh;
+    margin-left: 10px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .four{
+    background-image: url(../assets/casa3.jpeg);
+    background-size: cover;
+    height: 45vh;
+    margin-right: 10px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .button{
+    height: 12%;
+    width: 130px;
+    margin-bottom: 20px;
+    background-color: white;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    border: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: black;
+}
+
+  /*.card{
+    width: 100%;
+    height: 100%;
+  }*/
