--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,50 +1,60 @@
 
-
 .contenedor{
-    width: 100vw;
+    display: grid;
+    grid-template-columns: 45% 55%;
+    grid-template-rows: auto auto;
+    grid-gap: 5px;
+    }
+.texto img{
+    background-size: cover;
+    height: 25vh;
+    margin-right: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     display: flex;
-    flex-direction: row;
-    /*flex-direction: column;*/
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 70vh;
-    margin-top: 150px;
-    gap: 60px;
-    /*background-image: url(../assets/olivillo.jpg);*/
-    /*background-image: url(../assets/Diseño\ sin\ título.jpg);*/
-    /*background-image: url(../assets/fondo.jpg);
-    background-attachment: fixed;*/
+    justify-content: flex-end;
 }
 
-iframe{
-    /*width: 40%;
-    height: 80%;
-    margin-right: 50px;*/
-    width: fit-content;
+h2{
+    margin-bottom: 10px;
+    background-color:var(--second-color);
+    align-items: center;
 }
 
-.texto{
+p{
+    background-size: cover;
+    height: 25vh;
+    margin-left: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
-    width: 40%;
-    margin-left: 50px;
-    gap: 60px
-    ;
+}
+.ubicacion {
+    
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;   
 }
 
-.texto img{
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-}
+.ubicacion iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 
-h2{
-   text-decoration: underline;
-}
-p{
-    width: 40%;
 }
